updating to figwheel 0.5.19